# CPR

./: .gitignore  003-2CPR@30.csv  003-2CPR@60.csv  005-1CPR@30.csv  005-1CPR@60.csv  005-1_CPR_COMPREHENSIVE_ANALYSIS_REPORT.md  005-1_TRANSPARENCY_PARAMETER_ANALYSIS_CLARIFICATION.md  CPR_ANGULAR_ANALYSIS_REPORT.md  CPR_MAGNETIC_FIELD_ANALYSIS_REPORT.md  FREQUENCY_FIX_COMPLETION_REPORT.md  Makefile  OPTIMIZATION_COMPLETION_REPORT.md  PROJECT_RESTRUCTURING_REPORT.md  PROJECT_STATS.json  PROJECT_STATUS_CHECK.json  PROJECT_STRUCTURE.md  README.md  README_OLD.md  SAMPLE_005_1_PROJECT_COMPLETION_SUMMARY.md  SETUP_COMPLETION_REPORT.md  TEST_FIX_COMPLETION_REPORT.md  TEST_ORGANIZATION_SUMMARY.md  analysis_utils.py  analyze_435Ic_quick.py  analyze_all_simple.py  analyze_single_file.py  analyze_single_file_435Ic.py  analyze_single_file_simple.py  benchmark_preprocessing_methods.py  benchmark_report.md  check_fixed_frequency.py  config.json  config.py  debug_failures.py  debug_frequency_analysis.py  demo_preprocessing.py  final_integration_test.py  final_optimization_test.py  improved_thread_safety_test.py  main_processor.py  (+17 more)
config/: README.md  config.json
debug/: README.md
debug/scripts/: debug_detailed_preprocessing.py  debug_failures.py  debug_fix_solution.py  debug_nan_inf.py  debug_power_spectrum.py  debug_preprocessing.py  debug_specific_failures.py  fix_preprocessing.py
docs/: CPR_CONCEPT.md
examples/: example_usage.py  results_analysis_example.py
logs/: README.md
output/cross_sample_analysis/: cross_sample_analysis_report.txt  cross_sample_comparison.csv
output/full_analysis/images/: analysis_summary.csv
output/full_analysis/reports/: analysis_stats.json  detailed_results.csv  successful_analysis.csv
output/images/: analysis_summary.csv
output/sample_005_1_analysis/: sample_005_1_analysis_report.txt  sample_005_1_field_comparison.csv  sample_005_1_transparency_comparison.csv
output/specific_analysis/: analysis_results.json  detailed_summary.csv
output_benchmark/: analysis_summary.csv
output_thread_test_1/: analysis_summary.csv
scripts/: PROJECT_STATUS_CHECK.json  analyze_all_csv.py  analyze_specific_files.py  generate_detailed_report.py  quick_test.py  run_full_analysis.py
src/: __init__.py
src/cpr/: __init__.py  config.py  josephson_model.py  logger.py  main_processor.py  main_processor_improved.py  main_processor_optimized.py  visualization.py
tests/: __init__.py  test_60mT_analysis.py  test_cross_sample_comparison.py  test_field_comparison.py  test_parameters_comparison.py  test_sample_005_1_analysis.py
tests/integration/: final_integration_test.py  improved_thread_safety_test.py  test_skip_logic_fixed.py
tests/unit/: test_.ipynb  test_.py  test_exact_image_size.py  test_image_size.py  test_optimized.py  test_process_files.py
